comienzo funcionalidad de guardar el puesto en la bs (con virus)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/pantalla.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.ejb3-persistence.jar=C:\\Users\\John\\Downloads\\ejb3-persistence.jar\\ejb3-persistence.jar
 file.reference.postgresql-9.2-1002.jdbc4.jar=C:\\Program Files\\NetBeans 8.1\\ide\\modules\\ext\\postgresql-9.2-1002.jdbc4.jar
 file.reference.postgresql-9.4.1209.jre6.jar=C:\\Users\\John\\Downloads\\postgresql-9.4.1209.jre6.jar
 includes=**
@@ -42,7 +43,10 @@ javac.classpath=\
     ${file.reference.postgresql-9.2-1002.jdbc4.jar}:\
     ${libs.PostgreSQLDriver.classpath}:\
     ${libs.hibernate4-persistencemodelgen.classpath}:\
-    ${libs.eclipselink.classpath}
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.ejb3-persistence.jar}:\
+    ${libs.jpa2-persistence.classpath}:\
+    ${libs.jpa20-persistence.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
