--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.postgresql-9.2-1002.jdbc4.jar=C:\\Program Files\\NetBeans 8.1\\ide\\modules\\ext\\postgresql-9.2-1002.jdbc4.jar
+file.reference.postgresql-9.2-1002.jdbc4.jar-1=C:\\Program Files (x86)\\NetBeans 8.1\\ide\\modules\\ext\\postgresql-9.2-1002.jdbc4.jar
 file.reference.postgresql-9.4.1209.jre6.jar=C:\\Users\\John\\Downloads\\postgresql-9.4.1209.jre6.jar
 includes=**
 jar.compress=true
@@ -44,7 +45,8 @@ javac.classpath=\
     ${libs.hibernate4-persistencemodelgen.classpath}:\
     ${libs.eclipselink.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
-    ${libs.jpa20-persistence.classpath}
+    ${libs.jpa20-persistence.classpath}:\
+    ${file.reference.postgresql-9.2-1002.jdbc4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
