--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -44,7 +44,8 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${libs.jpa2-persistence.classpath}:\
     ${libs.jpa20-persistence.classpath}:\
-    ${file.reference.postgresql-9.2-1002.jdbc4.jar-1}
+    ${file.reference.postgresql-9.2-1002.jdbc4.jar-1}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
