--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/pantalla_original.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.poi-3.15.jar=C:\\Users\\pc\\Desktop\\poi-3.15\\poi-3.15.jar
 file.reference.postgresql-9.2-1002.jdbc4.jar=C:\\Program Files\\NetBeans 8.1\\ide\\modules\\ext\\postgresql-9.2-1002.jdbc4.jar
 file.reference.postgresql-9.2-1002.jdbc4.jar-1=C:\\Program Files (x86)\\NetBeans 8.1\\ide\\modules\\ext\\postgresql-9.2-1002.jdbc4.jar
 includes=**
@@ -45,7 +46,8 @@ javac.classpath=\
     ${libs.jpa2-persistence.classpath}:\
     ${libs.jpa20-persistence.classpath}:\
     ${file.reference.postgresql-9.2-1002.jdbc4.jar-1}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.poi-3.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
