Pantalla 2 completar cuestionrio

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.poi-3.15.jar=C:\\Users\\pc\\Desktop\\poi-3.15\\poi-3.15.jar
+file.reference.poi-3.15.jar-1=C:\\Users\\Usuario\\Dropbox\\TP DISE\u00d1O DE SISTEMAS 2016\\poi-3.15.jar
 file.reference.postgresql-9.2-1002.jdbc4.jar=C:\\Program Files\\NetBeans 8.1\\ide\\modules\\ext\\postgresql-9.2-1002.jdbc4.jar
 file.reference.postgresql-9.2-1002.jdbc4.jar-1=C:\\Program Files (x86)\\NetBeans 8.1\\ide\\modules\\ext\\postgresql-9.2-1002.jdbc4.jar
 includes=**
@@ -47,7 +48,8 @@ javac.classpath=\
     ${libs.jpa20-persistence.classpath}:\
     ${file.reference.postgresql-9.2-1002.jdbc4.jar-1}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.poi-3.15.jar}
+    ${file.reference.poi-3.15.jar}:\
+    ${file.reference.poi-3.15.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
