mini cambios que hice

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.poi-3.15.jar=C:\\Users\\Eunice\\Downloads\\poi-3.15\\poi-3.15.jar
+file.reference.poi-3.15.jar-1=C:\\Users\\pc\\Desktop\\poi-3.15\\poi-3.15.jar
 includes=**
 jar.compress=true
 javac.classpath=\
@@ -43,7 +44,8 @@ javac.classpath=\
     ${libs.jpa2-persistence.classpath}:\
     ${libs.jpa20-persistence.classpath}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.poi-3.15.jar}
+    ${file.reference.poi-3.15.jar}:\
+    ${file.reference.poi-3.15.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
