--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,7 @@ dist.jar=${dist.dir}/pantalla_original.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.poi-3.15.jar=C:\\Users\\Eunice\\Downloads\\poi-3.15\\poi-3.15.jar
-file.reference.poi-3.15.jar-1=C:\\Users\\pc\\Desktop\\poi-3.15\\poi-3.15.jar
+file.reference.poi-3.15.jar=C:\\Users\\John\\Dropbox\\TP DISE\u00d1O DE SISTEMAS 2016\\poi-3.15.jar
 includes=**
 jar.compress=true
 javac.classpath=\
@@ -44,8 +43,7 @@ javac.classpath=\
     ${libs.jpa2-persistence.classpath}:\
     ${libs.jpa20-persistence.classpath}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.poi-3.15.jar}:\
-    ${file.reference.poi-3.15.jar-1}
+    ${file.reference.poi-3.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
